feat: add app and config

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -39,5 +39,7 @@
   "Project": "项目",
   "Admin": "管理员",
   "Members": "成员",
-  "Tips": "提示"
+  "Tips": "提示",
+  "Config": "配置",
+  "Landscape": "全景"
 }
