fix: fix Configuration details #35

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -84,5 +84,6 @@
   "Operation": "操作",
   "Back": "上一步",
   "Business configuration": "业务配置",
-  "Search": "搜索"
+  "Search": "搜索",
+  "Modify config object item": "修改配置项"
 }
