--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -57,6 +57,7 @@
   "Table": "表格",
   "Text": "文本",
   "Release": "发布",
+  "UnReleased": "未发布",
   "Release name": "发布名称",
   "Description": "描述",
   "Changed configuration": "变更的配置",
