fix: Fix several bugs (#134)
* fix: add config object name repeat validation

* fix: fix bug

* feat: add i18n

* fix: fix Configuration details #35

* fix: fix Configuration details #37

* fix: fix roll-back #38

* fix: fix relation config object

* fix: fix clone config object

* fix: fix add public config object

* fix: fix relation config object release

* fix: Staging=>Development

Co-authored-by: yanpengju <yanpengju@masastack.com>
Co-authored-by: 阎鹏举 <阎鹏举@DESKTOP-28NV352>

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -41,5 +41,55 @@
   "Members": "成员",
   "Tips": "提示",
   "Config": "配置",
-  "Landscape": "全景"
+  "Landscape": "全景",
+  "Clone config": "克隆配置",
+  "Connect public config": "关联公共配置",
+  "Add": "添加",
+  "Modified": "有修改",
+  "Release history": "发布历史",
+  "Rollback": "回滚",
+  "Revoke": "撤销",
+  "Delete": "删除",
+  "Connected": "已关联",
+  "Released": "已发布",
+  "Unpublished": "未发布",
+  "Covered": "已覆盖",
+  "Table": "表格",
+  "Text": "文本",
+  "Release": "发布",
+  "UnReleased": "未发布",
+  "Release name": "发布名称",
+  "Description": "描述",
+  "Changed configuration": "变更的配置",
+  "Create config object item": "添加配置项",
+  "Config object name": "配置对象名称",
+  "Current": "当前",
+  "Rollbacked": "已回滚",
+  "App version from {xx}": "来自{xx}的应用版本",
+  "All configuration": "全部的配置",
+  "Rollback to this version": "回滚至此版本",
+  "Choose app": "选择应用",
+  "Choose config object": "选择配置对象",
+  "Clone config object": "克隆配置对象",
+  "All configurations to": "的所有配置至",
+  "`Configuration": "的配置",
+  "To": "至",
+  "Other app": "其他应用",
+  "Other environments/clusters currently app": "当前应用的其他环境/集群",
+  "Next": "下一步",
+  "Clusters requiring cloning": "需要克隆的集群",
+  "Config object": "配置对象",
+  "Deselect all": "取消全选",
+  "Select all": "全选",
+  "Name": "名称",
+  "Operation": "操作",
+  "Back": "上一步",
+  "Business configuration": "业务配置",
+  "Search": "搜索",
+  "Modify config object item": "修改配置项",
+  "State": "状态",
+  "Need associated cluster": "需要关联的集群",
+  "Select public config object": "择公共配置对象",
+  "Environment cluster": "环境集群",
+  "Public config object": "公共配置对象"
 }
