fix: fix SElevationTab title i18n not changed

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -102,5 +102,9 @@
   "LabelManagement": "标签管理",
   "This operation will be rolled back to the previous release version, and the current version will be invalidated, but it will not affect the configuration being modified": "此操作将会回滚到上个发布版本，且当前版本作废，但不影响正在修改的配置",
   "Rollback to": "回滚至",
-  "Release time": "发布时间"
+  "Release time": "发布时间",
+  "New value": "新的值",
+  "Old value": "旧的值",
+  "Published values": "发布的值",
+  "Unpublished value": "未发布的值"
 }
