style: update dcc css

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -106,5 +106,6 @@
   "New value": "新的值",
   "Old value": "旧的值",
   "Published values": "发布的值",
-  "Unpublished value": "未发布的值"
+  "Unpublished value": "未发布的值",
+  "Clone": "克隆"
 }
