feat: add clone biz config feature

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -120,5 +120,6 @@
   "Edit label": "编辑标签",
   "Add label": "新增标签",
   "Label": "标签",
-  "Label values": "标签值"
+  "Label values": "标签值",
+  "All configuration to": "的所有配置至"
 }
