--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -124,5 +124,9 @@
   "All configuration to": "的所有配置至",
   "Team detail": "团队详情",
   "Line:{errorLine}, key value must separate by '='": "第{errorLine}行，键和值必须以‘=’分割",
-  "Configuration from {name}": "来自{name}的配置"
+  "Configuration from {name}": "来自{name}的配置",
+  "OFF": "关",
+  "ON": "开",
+  "Team": "团队",
+  "Encrypted config object": "加密配置对象"
 }
