--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -62,8 +62,8 @@
   "Release name": "发布名称",
   "Description": "描述",
   "Changed configuration": "变更的配置",
-  "Create config object": "添加配置对象",
-  "Create config object item": "添加配置项",
+  "Create config object": "新增配置对象",
+  "Create config object item": "新增配置项",
   "Config object name": "配置对象名称",
   "Current": "当前",
   "Rollbacked": "已回滚",
@@ -88,10 +88,10 @@
   "Back": "上一步",
   "Business configuration": "业务配置",
   "Search": "搜索",
-  "Modify config object item": "修改配置项",
+  "Modify config object item": "编辑配置项",
   "State": "状态",
   "Need associated cluster": "需要关联的集群",
-  "Select public config object": "择公共配置对象",
+  "Select public config object": "选择公共配置对象",
   "Environment cluster": "环境集群",
   "Public config object": "公共配置对象",
   "Project detail": "项目详情",
@@ -113,7 +113,7 @@
   "The configuration object name conflicts, and the same configuration object name will overwrite the configuration information. If you need to clone, please modify the configuration object name": "配置对象名称冲突，配置对象名称相同将会覆盖配置信息，如需克隆请修改配置对象名称",
   "Publish": "发布",
   "Edit": "编辑",
-  "Add config item": "添加配置项",
+  "Add config item": "新增配置项",
   "More": "更多",
   "Copy name": "复制名称",
   "Edit in": "编辑于",
@@ -128,5 +128,11 @@
   "OFF": "关",
   "ON": "开",
   "Team": "团队",
-  "Encrypted config object": "加密配置对象"
+  "Encrypted config object": "加密配置对象",
+  "Select config object": "选择配置对象",
+  "Key: {key} already exists": "Key：{key} 已存在",
+  "Relation public config": "关联公共配置",
+  "Released configuration": "发布的配置",
+  "Before rollback": "回滚前",
+  "After rollback": "回滚后"
 }
