--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -134,5 +134,7 @@
   "Relation public config": "关联公共配置",
   "Released configuration": "发布的配置",
   "Before rollback": "回滚前",
-  "After rollback": "回滚后"
+  "After rollback": "回滚后",
+  "Lable code and label name cannot be repeated": "标签Code和标签Name不允许重复",
+  "Label value cannot be empty": "标签值不允许为空"
 }
