--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -136,5 +136,9 @@
   "Before rollback": "回滚前",
   "After rollback": "回滚后",
   "Lable code and label name cannot be repeated": "标签Code和标签Name不允许重复",
-  "Label value cannot be empty": "标签值不允许为空"
+  "Label value cannot be empty": "标签值不允许为空",
+  "Wrong format": "格式有误",
+  "Modification succeeded. Please publish to take effect!": "修改成功，若要生效请发布！",
+  "This version is obsolete and cannot be rolled back": "此版本已作废，无法回滚",
+  "This version is the same as the current version and cannot be rolled back": "该版本与当前版本配置相同，无法回滚"
 }
