fix: fix issues

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -44,7 +44,7 @@
   "Overview": "全景",
   "Clone config": "克隆配置",
   "Connect public config": "关联公共配置",
-  "Add": "新增",
+  "Add": "新建",
   "Modified": "有修改",
   "Release history": "发布历史",
   "Rollback": "回滚",
@@ -85,6 +85,7 @@
   "Select all": "全选",
   "Name": "名称",
   "Operation": "操作",
+  "Operation succeeded": "操作成功",
   "Back": "上一步",
   "Business configuration": "业务配置",
   "Search": "搜索",
@@ -138,7 +139,26 @@
   "Lable code and label name cannot be repeated": "标签Code和标签Name不允许重复",
   "Label value cannot be empty": "标签值不允许为空",
   "Wrong format": "格式有误",
-  "Modification succeeded. Please publish to take effect!": "修改成功，若要生效请发布！",
+  "Modification succeeded. Please publish to take effect": "修改成功，若要生效请发布",
   "This version is obsolete and cannot be rolled back": "此版本已作废，无法回滚",
-  "This version is the same as the current version and cannot be rolled back": "该版本与当前版本配置相同，无法回滚"
+  "This version is the same as the current version and cannot be rolled back": "该版本与当前版本配置相同，无法回滚",
+  "Config object already exists": "配置对象名称已存在",
+  "Please select environment/cluster": "请选择环境/集群",
+  "Delete config object item": "删除配置项",
+  "Deletion succeeded. Please publish to take effect": "删除成功，若要生效请发布",
+  "Are you sure delete config object item \"Key:{key},Value:{value}\"吗?": "确定要删除配置项”Key：{key}，Value：{value}“吗？",
+  "Config object content has not changed": "配置对象内容没有变化",
+  "Revoke config": "撤销配置",
+  "The modified but unpublished configuration under the configuration object \"{name}\" will be revoked. Are you sure you want to revoke it?": "配置对象“{name}”下已修改但尚未发布的配置将被撤销，您确定要撤销吗？",
+  "No publishing history can be rolled back": "没有可以回滚的发布历史",
+  "Delete config object": "删除配置对象",
+  "Deleting the config object \"{name}\" will cause the instance to fail to obtain the configuration of this config object. Are you sure you want to delete it?": "删除配置对象“{name}”将导致实例获取不到此配置对象的配置，确定要删除吗？",
+  "No publishing history": "暂无发布历史",
+  "Delete label": "删除标签",
+  "Are you sure you want to delete the label \"{typeCode}\"?": "确定要删除标签“{typeCode}”吗？",
+  "Please select the configuration to clone": "请选要克隆的配置",
+  "Please add public configuration first": "请先添加公共配置",
+  "Please select the cluster environment to associate": "请选择要关联的集群环境",
+  "Please select the public configuration to be associated": "请选择要关联的公共配置",
+  "The public configuration object has been associated in \"{environmentClusterName}\", please do not repeat the association": "该公共配置对象已在“{environmentClusterName}”中关联，请勿重复关联"
 }
