chore: update alert message

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -86,6 +86,12 @@
   "Name": "名称",
   "Operation": "操作",
   "Operation succeeded": "操作成功",
+  "Add succeeded": "新建成功",
+  "Edit succeeded": "编辑成功",
+  "Rollback succeeded": "回滚成功",
+  "Revoke succeeded": "撤销成功",
+  "Delete succeeded": "删除成功",
+  "Publish succeeded": "发布成功",
   "Back": "上一步",
   "Business configuration": "业务配置",
   "Search": "搜索",
