--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -166,5 +166,7 @@
   "Please add public configuration first": "请先添加公共配置",
   "Please select the cluster environment to associate": "请选择要关联的集群环境",
   "Please select the public configuration to be associated": "请选择要关联的公共配置",
-  "The public configuration object has been associated in \"{environmentClusterName}\", please do not repeat the association": "该公共配置对象已在“{environmentClusterName}”中关联，请勿重复关联"
+  "The public configuration object has been associated in \"{environmentClusterName}\", please do not repeat the association": "该公共配置对象已在“{environmentClusterName}”中关联，请勿重复关联",
+  "The label value Code or label value Name cannot be duplicate": "标签值Code或标签值Name不允许重复",
+  "Modification succeeded. Please publish to take effect!": "修改成功，若要生效请发布！"
 }
