i18n: long key change to short key

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -117,7 +117,7 @@
   "Published values": "发布的值",
   "Unpublished value": "未发布的值",
   "Clone": "克隆",
-  "The configuration object name conflicts, and the same configuration object name will overwrite the configuration information. If you need to clone, please modify the configuration object name": "配置对象名称冲突，配置对象名称相同将会覆盖配置信息，如需克隆请修改配置对象名称",
+  "ConfigurationObjectNameConflicts": "配置对象名称冲突，配置对象名称相同将会覆盖配置信息，如需克隆请修改配置对象名称",
   "Publish": "发布",
   "Edit": "编辑",
   "Add config item": "新增配置项",
@@ -145,20 +145,20 @@
   "Lable code and label name cannot be repeated": "标签Code和标签Name不允许重复",
   "Label value cannot be empty": "标签值不允许为空",
   "Wrong format": "格式有误",
-  "Modification succeeded. Please publish to take effect": "修改成功，若要生效请发布",
+  "ModificationSucceededPublish": "修改成功，若要生效请发布！",
   "This version is obsolete and cannot be rolled back": "此版本已作废，无法回滚",
   "This version is the same as the current version and cannot be rolled back": "该版本与当前版本配置相同，无法回滚",
   "Config object already exists": "配置对象名称已存在",
   "Please select environment/cluster": "请选择环境/集群",
   "Delete config object item": "删除配置项",
-  "Deletion succeeded. Please publish to take effect": "删除成功，若要生效请发布",
+  "DeletionSucceededPublish": "删除成功，若要生效请发布",
   "Are you sure delete config object item \"Key:{key},Value:{value}\"吗?": "确定要删除配置项”Key：{key}，Value：{value}“吗？",
   "Config object content has not changed": "配置对象内容没有变化",
   "Revoke config": "撤销配置",
-  "The modified but unpublished configuration under the configuration object \"{name}\" will be revoked. Are you sure you want to revoke it?": "配置对象“{name}”下已修改但尚未发布的配置将被撤销，您确定要撤销吗？",
+  "AreYouSureToRevoke": "配置对象“{name}”下已修改但尚未发布的配置将被撤销，您确定要撤销吗？",
   "No publishing history can be rolled back": "没有可以回滚的发布历史",
   "Delete config object": "删除配置对象",
-  "Deleting the config object \"{name}\" will cause the instance to fail to obtain the configuration of this config object. Are you sure you want to delete it?": "删除配置对象“{name}”将导致实例获取不到此配置对象的配置，确定要删除吗？",
+  "AreYouSureToDeleteConfigObject": "删除配置对象“{name}”将导致实例获取不到此配置对象的配置，确定要删除吗？",
   "No publishing history": "暂无发布历史",
   "Delete label": "删除标签",
   "Are you sure you want to delete the label \"{typeName}\"?": "确定要删除标签“{typeName}”吗？",
@@ -168,7 +168,6 @@
   "Please select the public configuration to be associated": "请选择要关联的公共配置",
   "The public configuration object has been associated in \"{environmentClusterName}\", please do not repeat the association": "该公共配置对象已在“{environmentClusterName}”中关联，请勿重复关联",
   "The label value Code or label value Name cannot be duplicate": "标签值Code或标签值Name不允许重复",
-  "Modification succeeded. Please publish to take effect!": "修改成功，若要生效请发布！",
   "There is no environment cluster to clone under the current application": "当前应用下没有需要克隆的环境集群",
   "Please select cluster": "选择集群",
   "Enable encryption": "是否开启加密",
