--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/en-US.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/en-US.json
@@ -5,5 +5,8 @@
   "ModificationSucceededPublish": "Modification succeeded. Please publish to take effect!",
   "DeletionSucceededPublish": "Deletion succeeded. Please publish to take effect",
   "AreYouSureToRevoke": "The modified but unpublished configuration under the configuration object \"{name}\" will be revoked. Are you sure you want to revoke it?",
-  "AreYouSureToDeleteConfigObject": "Deleting the config object \"{name}\" will cause the instance to fail to obtain the configuration of this config object. Are you sure you want to delete it?"
+  "AreYouSureToDeleteConfigObject": "Deleting the config object \"{name}\" will cause the instance to fail to obtain the configuration of this config object. Are you sure you want to delete it?",
+  "DuplicatePublicConfigAssociateAlertMessage": "The public configuration object has been associated in \"{environmentClusterName}\", please do not repeat the association.",
+  "DeleteConfigItemConfirmMessage": "Are you sure delete config object item \"Key:{key},Value:{value}\"?",
+  "RollBackAlertMessage": "This operation will be rolled back to the previous release version, and the current version will be invalidated, but it will not affect the configuration being modified."
 }
