fix: Replace 'Publish' with 'Release' and locale list in rollback modal

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -59,6 +59,8 @@
   "Text": "文本",
   "Release": "发布",
   "UnReleased": "未发布",
+  "Released value": "发布的值",
+  "Unreleased value": "未发布的值",
   "Release name": "发布名称",
   "Description": "描述",
   "Changed configuration": "变更的配置",
@@ -67,6 +69,8 @@
   "Config object name": "配置对象名称",
   "Current": "当前",
   "Rollbacked": "已回滚",
+  "UnRollback value": "回滚前的值",
+  "Rollbacked value": "回滚后的值",
   "App version from {xx}": "来自{xx}的应用版本",
   "All configuration": "全部的配置",
   "Rollback to this version": "回滚至此版本",
