--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -69,8 +69,6 @@
   "Config object name": "配置对象名称",
   "Current": "当前",
   "Rollbacked": "已回滚",
-  "UnRollback value": "回滚前的值",
-  "Rollbacked value": "回滚后的值",
   "App version from {xx}": "来自{xx}的应用版本",
   "All configuration": "全部的配置",
   "Rollback to this version": "回滚至此版本",
@@ -177,7 +175,7 @@
   "Enable encryption": "是否开启加密",
   "Format": "格式",
   "Hey, there is no project yet~ Please contact the project administrator~": "诶呦，还没有项目哦~请联系项目管理员~",
-  "Hey, there is no APP yet~ Please contact the project administrator~": "诶呦，还没有APP哦~请联系项目管理员~"
+  "Hey, there is no APP yet~ Please contact the project administrator~": "诶呦，还没有APP哦~请联系项目管理员~",
   "Value before rollback": "回滚前的值",
   "Value after rollback": "回滚后的值"
 }
