feat:add  i18n lanuage to save lable

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -177,5 +177,6 @@
   "Hey, there is no project yet~ Please contact the project administrator~": "诶呦，还没有项目哦~请联系项目管理员~",
   "Hey, there is no APP yet~ Please contact the project administrator~": "诶呦，还没有APP哦~请联系项目管理员~",
   "Value before rollback": "回滚前的值",
-  "Value after rollback": "回滚后的值"
+  "Value after rollback": "回滚后的值",
+  "The label value Code and label value Name cannot be duplicate": "标签值代码和名称不能重复"
 }
