Fix: ExpansionPanel auto collapse, Upgrade the Masa.Stack.Components-0.0.281. All In English, the language is unified

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -44,7 +44,7 @@
   "Overview": "全景",
   "Clone config": "克隆配置",
   "Connect public config": "关联公共配置",
-  "Add": "新建",
+  "New": "新建",
   "Modified": "有修改",
   "Release history": "发布历史",
   "Rollback": "回滚",
