Fix: ExpansionPanel auto collapse, Upgrade the Masa.Stack.Components-… (#456)
* Fix: ExpansionPanel auto collapse, Upgrade the Masa.Stack.Components-0.0.281. All In English, the language is unified

* Fix: All In English, the language is unified

* Add changed to New

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -44,7 +44,7 @@
   "Overview": "全景",
   "Clone config": "克隆配置",
   "Connect public config": "关联公共配置",
-  "Add": "新建",
+  "New": "新建",
   "Modified": "有修改",
   "Release history": "发布历史",
   "Rollback": "回滚",
@@ -64,8 +64,8 @@
   "Release name": "发布名称",
   "Description": "描述",
   "Changed configuration": "变更的配置",
-  "Create config object": "新增配置对象",
-  "Create config object item": "新增配置项",
+  "New config object": "新建配置对象",
+  "New config object item": "新建配置项",
   "Config object name": "配置对象名称",
   "Current": "当前",
   "Rollbacked": "已回滚",
@@ -122,12 +122,12 @@
   "ConfigurationObjectNameConflicts": "配置对象名称冲突，配置对象名称相同将会覆盖配置信息，如需克隆请修改配置对象名称",
   "Publish": "发布",
   "Edit": "编辑",
-  "Add config item": "新增配置项",
+  "New config item": "新建配置项",
   "More": "更多",
   "Copy name": "复制名称",
   "Edit in": "编辑于",
   "Edit label": "编辑标签",
-  "Add label": "新增标签",
+  "New label": "新建标签",
   "Label": "标签",
   "Label values": "标签值",
   "All configuration to": "的所有配置至",
