fix:Only icon button, mouse hover, should have tooltips

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -180,5 +180,6 @@
   "Value after rollback": "回滚后的值",
   "EmptyProject": "当前环境集群下还没有项目",
   "EmptyApp": "当前项目下还没有应用",
-  "EmptyConfigObject": "当前环境集群下还没有配置对象"
+  "EmptyConfigObject": "当前环境集群下还没有配置对象",
+  "Cancel Pin": "取消置顶"
 }
