UI-Design: Config detail. I18n: Modify changed to edit

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -97,7 +97,7 @@
   "Back": "上一步",
   "Business configuration": "业务配置",
   "Search": "搜索",
-  "Modify config object item": "编辑配置项",
+  "Edit config object item": "编辑配置项",
   "State": "状态",
   "Need associated cluster": "需要关联的集群",
   "Select public config object": "选择公共配置对象",
