--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/i18n/zh-CN.json
@@ -181,5 +181,6 @@
   "EmptyProject": "当前环境集群下还没有项目",
   "EmptyApp": "当前项目下还没有应用",
   "EmptyConfigObject": "当前环境集群下还没有配置对象",
-  "Cancel Pin": "取消置顶"
+  "Cancel Pin": "取消置顶",
+  "LatestReleaseConfig": "发布于"
 }
