--- a/src/Services/Masa.Dcc.Service/Assets/I18n/zh-CN.json
+++ b/src/Services/Masa.Dcc.Service/Assets/I18n/zh-CN.json
@@ -2,5 +2,6 @@
   "$DefaultLanguage": "true",
   "$Text": "中文简体",
   "Wrong format": "格式有误",
-  "Duplicate label type code": "标签类型代码重复"
+  "Duplicate label type code": "标签类型代码重复",
+  "Duplicate label type name": "标签类型名称重复"
 }
